[gd_scene load_steps=85 format=3 uid="uid://streydfmk15f"]

[ext_resource type="Script" uid="uid://cqoy317gsrc4b" path="res://scripts/crow_boss.gd" id="1_quhp5"]
[ext_resource type="PackedScene" uid="uid://ygafxmef8v38" path="res://scenes/shadow_explosion.tscn" id="2_7wjmp"]
[ext_resource type="Texture2D" uid="uid://cw5w6nqivlauj" path="res://assets/charachters/Karasu_tengu/Attack_1.png" id="2_e42k6"]
[ext_resource type="Texture2D" uid="uid://cijjnic08vjpj" path="res://assets/charachters/Karasu_tengu/Attack_2.png" id="3_1qycf"]
[ext_resource type="Texture2D" uid="uid://cie84hbkuntlm" path="res://assets/charachters/Karasu_tengu/Walk.png" id="3_jyf6x"]
[ext_resource type="Texture2D" uid="uid://bpixn7c082kd5" path="res://assets/charachters/Karasu_tengu/Dead.png" id="4_hmoie"]
[ext_resource type="Texture2D" uid="uid://bjx4vw73g3c2" path="res://assets/Circle_explosion/Circle_explosion1.png" id="4_vq3l8"]
[ext_resource type="Texture2D" uid="uid://do81ltuvejahh" path="res://assets/charachters/Karasu_tengu/Hurt.png" id="5_0kf1u"]
[ext_resource type="Texture2D" uid="uid://ggx40uiwmkwr" path="res://assets/Circle_explosion/Circle_explosion2.png" id="5_quhp5"]
[ext_resource type="Texture2D" uid="uid://cynmehynij680" path="res://assets/Circle_explosion/Circle_explosion3.png" id="6_1qycf"]
[ext_resource type="Texture2D" uid="uid://bh6pe3pkumkxg" path="res://assets/charachters/Karasu_tengu/Jump.png" id="6_k73mv"]
[ext_resource type="Texture2D" uid="uid://jx167uebgwtw" path="res://assets/charachters/Karasu_tengu/Idle.png" id="6_vo0hp"]
[ext_resource type="Texture2D" uid="uid://0wp7ntvaybwi" path="res://assets/Circle_explosion/Circle_explosion4.png" id="7_7wjmp"]
[ext_resource type="Texture2D" uid="uid://bjw7xl2ken4jr" path="res://assets/Circle_explosion/Circle_explosion5.png" id="8_r7nkj"]
[ext_resource type="Texture2D" uid="uid://dalw7lpgdwgn2" path="res://assets/Circle_explosion/Circle_explosion6.png" id="9_xwqbk"]
[ext_resource type="Texture2D" uid="uid://dqmea7b1bjvnn" path="res://assets/Circle_explosion/Circle_explosion7.png" id="10_sx63i"]
[ext_resource type="Texture2D" uid="uid://bmyuqargg0t38" path="res://assets/Circle_explosion/Circle_explosion8.png" id="11_m8s6u"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c8068"]
radius = 14.9999485
height = 94.004944

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_krfje"]
radius = 23.0
height = 46.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7am8t"]
atlas = ExtResource("2_e42k6")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo6ky"]
atlas = ExtResource("2_e42k6")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq3l8"]
atlas = ExtResource("2_e42k6")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpbnx"]
atlas = ExtResource("3_1qycf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3o51"]
atlas = ExtResource("3_1qycf")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_30e5y"]
atlas = ExtResource("3_1qycf")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_np0nr"]
atlas = ExtResource("3_1qycf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_81u4g"]
atlas = ExtResource("3_1qycf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfnuu"]
atlas = ExtResource("3_1qycf")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l14t3"]
atlas = ExtResource("3_1qycf")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_quhp5"]
atlas = ExtResource("3_jyf6x")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qycf"]
atlas = ExtResource("3_jyf6x")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wjmp"]
atlas = ExtResource("3_jyf6x")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7nkj"]
atlas = ExtResource("3_jyf6x")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwqbk"]
atlas = ExtResource("3_jyf6x")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx63i"]
atlas = ExtResource("3_jyf6x")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8s6u"]
atlas = ExtResource("3_jyf6x")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdj1l"]
atlas = ExtResource("3_jyf6x")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iexx"]
atlas = ExtResource("4_hmoie")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew8fk"]
atlas = ExtResource("4_hmoie")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_evmxh"]
atlas = ExtResource("4_hmoie")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjoxy"]
atlas = ExtResource("4_hmoie")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p7n6"]
atlas = ExtResource("4_hmoie")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_spphm"]
atlas = ExtResource("4_hmoie")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvxji"]
atlas = ExtResource("4_vq3l8")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3robq"]
atlas = ExtResource("5_quhp5")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwn80"]
atlas = ExtResource("6_1qycf")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwbeq"]
atlas = ExtResource("7_7wjmp")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_24ru7"]
atlas = ExtResource("8_r7nkj")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb7k1"]
atlas = ExtResource("9_xwqbk")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7fuv"]
atlas = ExtResource("10_sx63i")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs7oh"]
atlas = ExtResource("11_m8s6u")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e42k6"]
atlas = ExtResource("5_0kf1u")
region = Rect2(8, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyf6x"]
atlas = ExtResource("5_0kf1u")
region = Rect2(133, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmoie"]
atlas = ExtResource("5_0kf1u")
region = Rect2(258, 0, 125, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_401ex"]
atlas = ExtResource("6_vo0hp")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qvrb"]
atlas = ExtResource("6_vo0hp")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oatdx"]
atlas = ExtResource("6_vo0hp")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh2mg"]
atlas = ExtResource("6_vo0hp")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hro2f"]
atlas = ExtResource("6_vo0hp")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kf1u"]
atlas = ExtResource("6_k73mv")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo0hp"]
atlas = ExtResource("6_k73mv")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_20odd"]
atlas = ExtResource("6_k73mv")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7e2q"]
atlas = ExtResource("6_k73mv")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_45tts"]
atlas = ExtResource("6_k73mv")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq8lv"]
atlas = ExtResource("6_k73mv")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s6pn"]
atlas = ExtResource("6_k73mv")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_crmah"]
atlas = ExtResource("6_k73mv")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y78sq"]
atlas = ExtResource("6_k73mv")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d1np"]
atlas = ExtResource("6_k73mv")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_honbf"]
atlas = ExtResource("6_k73mv")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dgs1"]
atlas = ExtResource("6_k73mv")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ermf"]
atlas = ExtResource("6_k73mv")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn7hl"]
atlas = ExtResource("6_k73mv")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e11mv"]
atlas = ExtResource("6_k73mv")
region = Rect2(1792, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m56j"]
atlas = ExtResource("2_e42k6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj7hu"]
atlas = ExtResource("2_e42k6")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_buday"]
atlas = ExtResource("2_e42k6")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_va15m"]
atlas = ExtResource("3_1qycf")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmor"]
atlas = ExtResource("3_1qycf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x2ke"]
atlas = ExtResource("3_1qycf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_0v6m6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7am8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo6ky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq3l8")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpbnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3o51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30e5y")
}],
"loop": false,
"name": &"attack2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_np0nr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81u4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfnuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l14t3")
}],
"loop": true,
"name": &"attack_air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_quhp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qycf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wjmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7nkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwqbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx63i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8s6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdj1l")
}],
"loop": true,
"name": &"chase",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iexx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew8fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evmxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjoxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p7n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spphm")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvxji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3robq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwn80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwbeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24ru7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb7k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7fuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs7oh")
}],
"loop": false,
"name": &"explosion",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e42k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyf6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmoie")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_401ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qvrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oatdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh2mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hro2f")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kf1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo0hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20odd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7e2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45tts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq8lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s6pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crmah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y78sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d1np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_honbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dgs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ermf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn7hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e11mv")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m56j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj7hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buday")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buday")
}],
"loop": false,
"name": &"ready",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_va15m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfmor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x2ke")
}],
"loop": false,
"name": &"ready_air",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s6rll"]
radius = 4.0
height = 82.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lh407"]
radius = 59.00433
height = 339.9344

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1qycf"]
radius = 15.0
height = 88.0

[node name="crow_boss" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 2
floor_max_angle = 1.3089969
script = ExtResource("1_quhp5")
explosion_scene = ExtResource("2_7wjmp")
vertical_attack_delay = 0.8

[node name="hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(-4, 22.000002)
rotation = -3.1442285
shape = SubResource("CapsuleShape2D_c8068")

[node name="Flipper" type="Node2D" parent="."]

[node name="attack_hitbox" type="Area2D" parent="Flipper"]
collision_mask = 4
monitoring = false

[node name="attack_collision" type="CollisionShape2D" parent="Flipper/attack_hitbox"]
position = Vector2(18, 23)
shape = SubResource("CapsuleShape2D_krfje")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Flipper"]
scale = Vector2(1.1, 1.1)
sprite_frames = SubResource("SpriteFrames_0v6m6")
animation = &"ready"
frame = 3
frame_progress = 1.0

[node name="raywall" type="RayCast2D" parent="Flipper"]
position = Vector2(0, 37)
target_position = Vector2(20, 0)

[node name="rayfloor" type="RayCast2D" parent="Flipper"]
position = Vector2(17, 32)
target_position = Vector2(1, 77)

[node name="rayspikes" type="RayCast2D" parent="Flipper"]
position = Vector2(17, 32)
target_position = Vector2(1, 77)
collision_mask = 8

[node name="rayattack" type="RayCast2D" parent="Flipper"]
position = Vector2(-19, 22)
target_position = Vector2(63, 0)
collision_mask = 4

[node name="enemy_avoid_area" type="Area2D" parent="Flipper"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flipper/enemy_avoid_area"]
position = Vector2(16, 27)
shape = SubResource("CapsuleShape2D_s6rll")

[node name="Bloodparticles" type="CPUParticles2D" parent="Flipper"]
position = Vector2(-2, 3)
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.5
randomness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 200)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angle_max = 357.5
color = Color(1.5480369, 0.07154224, 0, 1)

[node name="Shadowparticles" type="CPUParticles2D" parent="Flipper"]
position = Vector2(-6, 17)
amount = 100
lifetime = 3.0
preprocess = 0.6
emission_shape = 1
emission_sphere_radius = 43.24
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 50.0
angle_max = 357.5
scale_amount_min = 0.0
scale_amount_max = 3.0
color = Color(0.15642485, 1.7429347e-05, 0.15642336, 1)

[node name="detection_area" type="Area2D" parent="."]
visible = false
collision_mask = 4

[node name="detection_collision" type="CollisionShape2D" parent="detection_area"]
position = Vector2(1, 15)
rotation = 1.5758936
shape = SubResource("CapsuleShape2D_lh407")

[node name="area_air_attack" type="Area2D" parent="."]
collision_mask = 5
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_air_attack"]
position = Vector2(-4, 24)
shape = SubResource("CapsuleShape2D_1qycf")
debug_color = Color(0.8172605, 0.32318026, 0.6334168, 0.41960785)

[connection signal="body_entered" from="Flipper/attack_hitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="area_air_attack" to="." method="_on_area_air_attack_body_entered"]
